<?xml version="1.0" encoding="ISO-8859-1"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>se.csn</groupId>
    <artifactId>notmotor</artifactId>
    <version>1.0-SNAPSHOT</version>
    <relativePath>../NotmotorBuild</relativePath>
  </parent>

  <groupId>se.csn.notmotor</groupId>
  <artifactId>notmotoriplwebb</artifactId>
  <version>2.0-SNAPSHOT</version>

  <packaging>war</packaging>

  <name>NotmotorIplWebb</name>

  <description>Notmotor Ipl Webb : Parent: NotmotorBuild</description>


  <url>notmotor-ipl/</url>
  <inceptionYear>2007</inceptionYear>

  <organization>
    <name>Centrala studiestödsnämnden</name>
    <url>http://www.csn.se/</url>
  </organization>

  <dependencies>
    <dependency>
      <groupId>se.csn</groupId>
      <artifactId>ark</artifactId>
      <version>3.0.1</version>
    </dependency>
    <dependency>
      <groupId>se.csn</groupId>
      <artifactId>utils</artifactId>
      <version>1.0.0</version>
      <exclusions>
        <exclusion>
          <groupId>javax.j2ee</groupId>
          <artifactId>j2ee</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>se.csn.notmotor</groupId>
      <artifactId>notmotorjar</artifactId>
      <version>2.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>se.csn</groupId>
      <artifactId>notmotoriplclient</artifactId>
      <version>2.1-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
    </dependency>
    <dependency>
      <groupId>commons-collections</groupId>
      <artifactId>commons-collections</artifactId>
      <!--   		<optional>true</optional> -->
    </dependency>
    <dependency>
      <groupId>opensymphony</groupId>
      <artifactId>quartz</artifactId>
      <version>1.6.0</version>
    </dependency>

  </dependencies>

  <build>
    <!--
  <sourceDirectory>${project.basedir}/JavaSource</sourceDirectory>
  <testSourceDirectory>${project.basedir}/test</testSourceDirectory>
  <outputDirectory>${project.basedir}/target/classes</outputDirectory>
  <testOutputDirectory>${project.basedir}/target/test-classes</testOutputDirectory>
  <defaultGoal>compile</defaultGoal>
  <resources>
   <resource>
    <directory>${project.basedir}/JavaSource</directory>
    <includes>
     <include>**/*.java</include>
    </includes>
   </resource>
  </resources>-->
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <warSourceExcludes>**/*Test*</warSourceExcludes>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
            </manifest>
          </archive>
          <!--
     <webXml>${project.basedir}/WebContent/WEB-INF/web.xml</webXml>
     <warSourceDirectory>${project.basedir}/WebContent</warSourceDirectory>
    -->
          <addMavenDescriptor>false</addMavenDescriptor>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
    </plugins>

  </build>

</project>
